--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </div>
     </section>
 
-    <section class="testimonials" id="testimonials">
+    <!-- <section class="testimonials" id="testimonials">
         <div class="testimonials-box">
             <h2 class="heading">Testimonials</h2>
             <div class="wrapper">
@@ -290,7 +290,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
