--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#work">My Work</a>
-            <a href="#testimonials">Testimonials</a>
+            <!-- <a href="#testimonials">Testimonials</a> -->
             <a href="#contact">Contact</a>
         </nav>
     </header>
