Updated footer links until sections are complete

--- a/index.html
+++ b/index.html
@@ -326,13 +326,13 @@
                 <a href="#">FAQ</a>
             </li> -->
             <li>
-                <a href="#">My Work</a>
+                <a href="#education">Education</a>
             </li>
             <li>
-                <a href="#">About Me</a>
+                <a href="#work">My Work</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
             <!-- <li>
                 <a href="#">Testimonials</a>
