Updated tag colors in css and html files

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <img src="/images/StephaniePettisAndRioWebsitePic.png" alt="rover" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-teal">WordPress</span>
+                    <span class="tag tag-blue">WordPress</span>
                     <h3>
                         Stephanie Pettis and RIO
                     </h3>
@@ -167,7 +167,7 @@
                     <img src="/images/budgetApp.jpg" alt="city" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-pink">HTML / CSS</span>
+                    <span class="tag tag-purple">HTML / CSS</span>
                     <h3>
                         Budget App
                     </h3>
@@ -186,7 +186,7 @@
                     <img src="/images/NatorsSite.jpg" alt="city" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-pink">HTML / CSS</span>
+                    <span class="tag tag-purple">HTML / CSS</span>
                     <h3>
                         Natours
                     </h3>
@@ -206,7 +206,7 @@
                     <img src="/images/SpinaBifidaAssociationWebsite.jpg" alt="city" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-pink">WordPress</span>
+                    <span class="tag tag-blue">WordPress</span>
                     <h3>
                         Spina Bifida Associan Of Georgia
                     </h3>
@@ -227,7 +227,7 @@
                     <img src="/images/muscleNerdz.jpg" alt="city" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-pink">WordPress</span>
+                    <span class="tag tag-blue">WordPress</span>
                     <h3>
                         Muscle Nerdz
                     </h3>
