--- a/index.html
+++ b/index.html
@@ -326,6 +326,9 @@
                 <a href="#">FAQ</a>
             </li> -->
             <li>
+                <a href="#home">Home</a>
+            </li>
+            <li>
                 <a href="#education">Education</a>
             </li>
             <li>
