--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="/images/TrilloSite.jpg" alt="ballons" />
+                    <img src="/images/TrilloAppWebProject.png" alt="ballons" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-purple">HTML / CSS</span>
