Updated PNG file in projects area

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="/images/NatorsSite.jpg" alt="city" />
+                    <img src="/images/NatorsWebProject.png" alt="city" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-purple">HTML / CSS</span>
