--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <!-- <div class="card">
                 <div class="card-header">
                     <img src="/images/SpinaBifidaAssociationWebsite.jpg" alt="city" />
                 </div>
@@ -239,7 +239,7 @@
                         <p class="code-link">View Code</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
     </section>
 
     <!-- <section class="testimonials" id="testimonials">
