Uploaded PNG for projects section and updated alt tags

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         <div class="container">
             <div class="card">
                 <div class="card-header">
-                    <img src="/images/StephaniePettisAndRIO_WebProject.png" alt="rover" />
+                    <img src="/images/StephaniePettisAndRIO_WebProject.png" alt="Stephanie Pettis and RIO website" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-blue">WordPress</span>
+                    <span class="tag tag-blue">WordPress</span>s
                     <h3>
                         Stephanie Pettis and RIO
                     </h3>
@@ -146,7 +146,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="/images/TrilloAppWebProject.png" alt="ballons" />
+                    <img src="/images/TrilloAppWebProject.png" alt="Trillo Web App" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-purple">HTML / CSS</span>
@@ -164,7 +164,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="/images/budgetApp.jpg" alt="city" />
+                    <img src="/images/BudgetAppWebProject.png" alt="Budget Web App" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-purple">HTML / CSS</span>
@@ -183,7 +183,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="/images/NatorsWebProject.png" alt="city" />
+                    <img src="/images/NatorsWebProject.png" alt="Nator's Website Project" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-purple">HTML / CSS</span>
