Updated Index page

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <img src="/images/StephaniePettisAndRIO_WebProject.png" alt="Stephanie Pettis and RIO website" />
                 </div>
                 <div class="card-body">
-                    <span class="tag tag-blue">WordPress</span>s
+                    <span class="tag tag-blue">WordPress</span>
                     <h3>
                         Stephanie Pettis and RIO
                     </h3>
@@ -139,7 +139,7 @@
                         on as well.
                     </p>
                     <div class="card-footer">
-                        <p class="code-link">View Code</p>
+                        <a href="#"><p class="code-link">View Project</p></a>
                     </div>
 
                 </div>
@@ -158,7 +158,7 @@
                         course on Udemy, by Jonas Schmedtmann.
                     </p>
                     <div class="card-footer">
-                        <p class="code-link">View Code</p>
+                        <a href="#"><p class="code-link">View Project</p></a>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                         tracking app that uses plain JavaScript (ES6), HTML, and CSS3.
                     </p>
                     <div class="card-footer">
-                        <p class="code-link">View Code</p>
+                        <a href="#"><p class="code-link">View Project</p></a>
                     </div>
                 </div>
             </div>
@@ -196,7 +196,7 @@
                         sharpen my skills as a web developer, utilizing the currect skillset and development.
                     </p>
                     <div class="card-footer">
-                        <p class="code-link">View Code</p>
+                        <a href="#"><p class="code-link">View Project</p></a>
                     </div>
                 </div>
             </div>
@@ -240,6 +240,7 @@
                     </div>
                 </div>
             </div> -->
+        </div>
     </section>
 
     <!-- <section class="testimonials" id="testimonials">
