--- a/index.html
+++ b/index.html
@@ -123,7 +123,38 @@
 
         <!-- Card components -->
 
-        <div class="container">
+        <div class="grid-container">
+            <div class="portfolio-item">
+                <figure>
+                    <img src="/images/StephaniePettisAndRIO_WebProject.png" width="750px" alt="Stephanie Pettis and RIO website">
+                    <figcaption>Stephanie Pettis and RIO</figcaption>
+                </figure>
+            </div>
+
+            <div class="portfolio-item">
+                <figure>
+                    <img src="/images/TrilloAppWebProject.png" width="750px" alt="Trillo Web App">
+                    <figcaption>Trillo Web App</figcaption>
+                </figure>
+            </div>
+
+            <div class="portfolio-item">
+                <figure>
+                    <img src="/images/BudgetAppWebProject.png" width="750px" alt="Budgety Web App">
+                    <figcaption>Budgety App</figcaption>
+                </figure>
+            </div>
+
+            <div class="portfolio-item">
+                <figure>
+                    <img src="/images/NatorsWebProject.png" width="750px" alt="Nators Website">
+                    <figcaption>Nators</figcaption>
+                </figure>
+            </div>
+
+        </div>
+
+        <!-- <div class="container">
             <div class="card">
                 <div class="card-header">
                     <img src="/images/StephaniePettisAndRIO_WebProject.png" alt="Stephanie Pettis and RIO website" />
@@ -183,7 +214,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <img src="/images/NatorsWebProject.png" alt="Nator's Website Project" />
+                    <img src="/images/NatorsWebProject.png" width="1905" height="1231" alt="Nator's Website Project" />
                 </div>
                 <div class="card-body">
                     <span class="tag tag-purple">HTML / CSS</span>
