reverted back to original until I figure out how to fix the responsive media query for mobile on portfolio section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         <!-- Card components -->
 
-        <div class="grid-container">
+        <!-- <div class="grid-container">
             <div class="portfolio-item">
                 <figure>
                     <img src="/images/StephaniePettisAndRIO_WebProject.png" width="750px" alt="Stephanie Pettis and RIO website">
@@ -152,9 +152,9 @@
                 </figure>
             </div>
 
-        </div>
+        </div> -->
 
-        <!-- <div class="container">
+        <div class="container">
             <div class="card">
                 <div class="card-header">
                     <img src="/images/StephaniePettisAndRIO_WebProject.png" alt="Stephanie Pettis and RIO website" />
